tests/snapshots/tui_view_test__list_pane_focused.snap
---
source: tests/tui_view_test.rs
expression: "(vm.search.is_focused, vm.list.is_focused, vm.detail.is_focused)"
---
(
    false,
    true,
    false,
)
