tests/snapshots/tui_view_test__loading_view.snap
---
source: tests/tui_view_test.rs
expression: "(&vm.empty_state, vm.is_editing, vm.total_all_tickets)"
---
(
    Some(
        Loading,
    ),
    false,
    0,
)
