tests/snapshots/tui_view_test__nav_down_three.snap
---
source: tests/tui_view_test.rs
expression: "(state.selected_index, state.scroll_offset)"
---
(
    3,
    0,
)
