tests/snapshots/tui_view_test__nav_to_bottom_scroll.snap
---
source: tests/tui_view_test.rs
expression: "(state.selected_index, state.scroll_offset)"
---
(
    29,
    25,
)
