tests/snapshots/tui_view_test__no_janus_dir_view.snap
---
source: tests/tui_view_test.rs
expression: "(&vm.empty_state, vm.total_all_tickets)"
---
(
    Some(
        NoJanusDir,
    ),
    0,
)
