tests/snapshots/tui_view_test__pane_cycle_sequence.snap
---
source: tests/tui_view_test.rs
expression: "(pane1, pane2, pane3)"
---
(
    Detail,
    Search,
    List,
)
