tests/snapshots/tui_view_test__search_exit.snap
---
source: tests/tui_view_test.rs
expression: "(&state.search_query, state.active_pane)"
---
(
    "test",
    List,
)
