tests/snapshots/tui_view_test__search_flow.snap
---
source: tests/tui_view_test.rs
expression: "(&state.search_query, state.active_pane, state.selected_index)"
---
(
    "test",
    Search,
    0,
)
